tests/paczka1/fuzzy1/82199106.err
Error in line 14: u2doA A393 24,6
Error in line 21: jS469x A393 486,3
Error in line 31: A393 S873 38,4
Error in line 15: r9Uo A393 69,6
